--- a/templates/render.tmpl
+++ b/templates/render.tmpl
@@ -124,7 +124,7 @@
 			</a>
 		</div>
 		<div class="px-2 hover:text-blue-500">
-			<a title="www" target="_blank" href="http://{{ $root }}.{{ $wwwHost }}/{{ with $path }}{{ . }}/{{ end }}{{.Name}}">
+			<a title="www" target="_blank" href="http://{{ $root }}.{{ $wwwHost }}{{ with $path }}{{ . }}{{ else }}/{{ end }}{{.Name}}">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
 				</svg>
@@ -239,7 +239,7 @@ async function createEmptyDir() {
 	});
 	const responseJson = await response.json();
 	console.log(responseJson);
-	const root = responseJson.root;
+	const root = responseJson.Root;
 	window.location = "/blobs/" + root + "/{{ $path }}";
 }
 
@@ -261,7 +261,7 @@ async function createEmptyFile() {
 	});
 	const responseJson = await response.json();
 	console.log(responseJson);
-	const root = responseJson.root;
+	const root = responseJson.Root;
 	window.location = "/blobs/" + root + "/{{ $path }}";
 }
 
@@ -282,7 +282,8 @@ async function renameLink(e, linkName) {
 	});
 	const responseJson = await response.json();
 	console.log(responseJson);
-	window.location = responseJson.RedirectURL;
+	const root = responseJson.Root;
+	window.location = "/blobs/" + root + "/{{ $path }}";
 }
 
 async function deleteLink(e, linkName) {
@@ -311,15 +312,18 @@ async function save() {
 	const response = await fetch("/api/update", {
 		method: "POST",
 		body: JSON.stringify({
-			type: "file",
 			root: "{{ .root }}",
-			path: "{{ .path }}",
-			content: btoa(blob.innerText),
+			blobs: [{
+				type: "file",
+				path: "{{ .path }}",
+				content: btoa(blob.innerText),
+			}]
 		})
 	});
 	const responseJson = await response.json();
 	console.log(responseJson);
-	window.location = responseJson.RedirectURL;
+	const root = responseJson.Root;
+	window.location = "/blobs/" + root + "{{ $path }}";
 }
 </script>
 
